--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "node": ">=6.9"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "fs-extra": "^1.0.0",
     "mocha": "^3.2.0",
     "supertest": "^2.0.1"
   }
