--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "DEBUG=online-session:* npm start",
+    "dev": "DEBUG=online-session:* nodemon ./bin/www",
     "lint": "eslint . --fix --ext .js",
     "test": "mocha test/**/*.spec.js",
     "start": "node ./bin/www"
@@ -30,6 +30,7 @@
     "eslint-plugin-react": "^6.8.0",
     "fs-extra": "^1.0.0",
     "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
     "supertest": "^2.0.1"
   }
 }
